--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -9,8 +9,11 @@ on:
       - Makefile
 
 jobs:
-  gotest:
-    runs-on: ubuntu-20.04
+  unit-test:
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macos-latest, windows-latest]
+    runs-on: ${{ matrix.os }}
 
     steps:
     - uses: actions/checkout@v4
@@ -23,6 +26,17 @@ jobs:
 
     - name: Test
       run: go test -v ./...
+
+  build:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+
+    - name: Set up Go
+      uses: actions/setup-go@v5
+      with:
+        go-version-file: go.mod
+        check-latest: true
 
     - name: Verify all binaries can be built
       run: make build-all
