Install a newer go manually for codeql
Signed-off-by: Kimmo Lehto <klehto@mirantis.com>

--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -40,6 +40,14 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v4
 
+    # Added as suggested in https://github.com/github/codeql-action/issues/1842 to bring in a newer go than exists
+    # preinstalled on the runners
+    - name: Set up Go
+      uses: actions/setup-go@v5
+      with:
+        go-version-file: go.mod
+        check-latest: true
+
     # Initializes the CodeQL tools for scanning.
     - name: Initialize CodeQL
       uses: github/codeql-action/init@v3
