--- a/.github/workflows/smoke.yml
+++ b/.github/workflows/smoke.yml
@@ -67,6 +67,35 @@ jobs:
           LINUX_IMAGE: ${{ matrix.image }}
         run: make smoke-basic
   
+  smoke-basic-rootless:
+    strategy:
+      matrix:
+        image:
+          - quay.io/k0sproject/bootloose-debian12
+          - quay.io/k0sproject/bootloose-ubuntu20.04
+    name: Basic 1+1 smoke (regular user login)
+    needs: build
+    runs-on: ubuntu-20.04
+
+    steps:
+
+      - uses: actions/checkout@v4
+      - name: Set up Go
+        uses: actions/setup-go@v5
+        with:
+          go-version-file: go.mod
+          check-latest: true
+
+      - {"name":"Compiled binary cache","uses":"actions/download-artifact@v4","with":{"name":"k0sctl","path":"."}}
+      - {"name":"K0sctl cache","uses":"actions/cache@v3","with":{"path":"/var/cache/k0sctl/k0s\n~/.cache/k0sctl/k0s\n","key":"k0sctl-cache"}}
+      - {"name":"Kubectl cache","uses":"actions/cache@v3","with":{"path":"smoke-test/kubectl\n","key":"kubectl-${{ hashFiles('smoke-test/smoke.common.sh') }}","restore-keys":"kubectl-"}}
+      - {"name":"Make binaries executable","run":"chmod +x k0sctl || true\nchmod +x smoke-test/kubectl || true"}
+
+      - name: Run smoke tests
+        env:
+          LINUX_IMAGE: ${{ matrix.image }}
+        run: make smoke-basic-rootless
+  
   smoke-basic-idlike:
     name: Basic 1+1 smoke (ID_LIKE fallback)
     needs: build
