Reinstall already installed k0s to reconfigure installFlags
Signed-off-by: Kimmo Lehto <klehto@mirantis.com>

--- a/smoke-test/Makefile
+++ b/smoke-test/Makefile
@@ -31,6 +31,9 @@ smoke-basic-openssh: $(bootloose) id_rsa_k0s k0sctl
 smoke-dynamic: $(bootloose) id_rsa_k0s k0sctl
 	./smoke-dynamic.sh
 
+smoke-reinstall: $(bootloose) id_rsa_k0s k0sctl
+	./smoke-reinstall.sh
+
 smoke-files: $(bootloose) id_rsa_k0s k0sctl
 	./smoke-files.sh
 
