--- a/.github/workflows/smoke.yml
+++ b/.github/workflows/smoke.yml
@@ -262,6 +262,25 @@ jobs:
         env:
           LINUX_IMAGE: ${{ matrix.image }}
         run: make smoke-controller-swap
+  
+  smoke-reinstall:
+    strategy:
+      matrix:
+        image:
+          - quay.io/k0sproject/bootloose-alpine3.18
+          - quay.io/k0sproject/bootloose-ubuntu20.04
+
+    name: Reinstall (modify install flags)
+    needs: build
+    runs-on: ubuntu-20.04
+
+    steps:
+      - uses: actions/checkout@v4
+      - uses: ./.github/actions/smoke-test-cache
+      - name: Run smoke tests
+        env:
+          LINUX_IMAGE: ${{ matrix.image }}
+        run: make smoke-reinstall
 
   smoke-init:
     name: Init sub-command smoke test
