Consider k0s onlyBindToAddress option when building API URLs
Signed-off-by: Kimmo Lehto <klehto@mirantis.com>

--- a/smoke-test/k0sctl-downloadurl.yaml
+++ b/smoke-test/k0sctl-downloadurl.yaml
@@ -17,5 +17,7 @@ spec:
   k0s:
     config:
       spec:
+        api:
+          externalAddress: "${K0S_API_EXTERNAL_ADDRESS}"
         telemetry:
           enabled: false
