--- a/smoke-test/k0sctl-single.yaml
+++ b/smoke-test/k0sctl-single.yaml
@@ -19,5 +19,7 @@ spec:
     version: "$K0S_VERSION"
     config:
       spec:
+        api:
+          externalAddress: "${K0S_API_EXTERNAL_ADDRESS}"
         telemetry:
           enabled: false
