--- a/smoke-test/k0sctl-controller-swap.yaml
+++ b/smoke-test/k0sctl-controller-swap.yaml
@@ -24,6 +24,8 @@ spec:
     version: "${K0S_VERSION}"
     config:
       spec:
+        api:
+          externalAddress: "${K0S_API_EXTERNAL_ADDRESS}"
         telemetry:
           enabled: false
 
