--- a/smoke-test/k0sctl-dynamic.yaml
+++ b/smoke-test/k0sctl-dynamic.yaml
@@ -20,5 +20,7 @@ spec:
     dynamicConfig: true
     config:
       spec:
+        api:
+          externalAddress: "${K0S_API_EXTERNAL_ADDRESS}"
         telemetry:
           enabled: false
