Use kube API URL in join token to validate worker connectivity
Signed-off-by: Kimmo Lehto <klehto@mirantis.com>

--- a/smoke-test/k0sctl-controller-swap.yaml
+++ b/smoke-test/k0sctl-controller-swap.yaml
@@ -14,7 +14,7 @@ spec:
         address: "127.0.0.1"
         port: 9023
         keyPath: ./id_rsa_k0s
-    - role: controller
+    - role: controller+worker
       uploadBinary: true
       ssh:
         address: "127.0.0.1"
