Read config from multidoc/multiple YAMLs
Signed-off-by: Kimmo Lehto <klehto@mirantis.com>

--- a/smoke-test/Makefile
+++ b/smoke-test/Makefile
@@ -61,5 +61,9 @@ smoke-backup-restore: $(bootloose) id_rsa_k0s k0sctl
 smoke-controller-swap: $(bootloose) id_rsa_k0s k0sctl
 	BOOTLOOSE_TEMPLATE=bootloose-controller-swap.yaml.tpl K0SCTL_CONFIG=k0sctl-controller-swap.yaml ./smoke-controller-swap.sh
 
+smoke-multidoc: $(bootloose) id_rsa_k0s k0sctl
+	./smoke-multidoc.sh
+
+
 %.iid: Dockerfile.%
 	docker build --iidfile '$@' - < '$<'
