--- a/.github/workflows/smoke.yml
+++ b/.github/workflows/smoke.yml
@@ -108,6 +108,23 @@ jobs:
         env:
           LINUX_IMAGE: ${{ matrix.image }}
         run: make smoke-basic-openssh
+  
+  smoke-multidoc:
+    strategy:
+      matrix:
+        image:
+          - quay.io/k0sproject/bootloose-alpine3.18
+    name: Basic 1+1 smoke using multidoc yamls
+    needs: build
+    runs-on: ubuntu-20.04
+
+    steps:
+      - uses: actions/checkout@v4
+      - uses: ./.github/actions/smoke-test-cache
+      - name: Run smoke tests
+        env:
+          LINUX_IMAGE: ${{ matrix.image }}
+        run: make smoke-multidoc
 
   smoke-files:
     strategy:
