--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -7,6 +7,13 @@ on:
       - go.mod
       - go.sum
       - Makefile
+  push:
+    branches: [main]
+    paths:
+      - '**.go'
+      - go.mod
+      - go.sum
+      - Makefile
 
 jobs:
   unit-test:
