--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -3,6 +3,10 @@ on:
   pull_request:
     paths:
       - '**.go'
+  push:
+    branches: [main]
+    paths:
+      - '**.go'
 
 jobs:
   golangci-lint:
