--- a/.github/workflows/gomod-lint.yml
+++ b/.github/workflows/gomod-lint.yml
@@ -4,6 +4,11 @@ on:
     paths:
       - 'go.mod'
       - 'go.sum'
+  push:
+    branches: [main]
+    paths:
+      - 'go.mod'
+      - 'go.sum'
 
 jobs:
   gomod-lint:
