--- a/.github/workflows/update-latest-release.yml
+++ b/.github/workflows/update-latest-release.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Check out code
         uses: actions/checkout@v4
         with:
-          ref: ${{ github.event.workflow_run.head_sha }}
+          ref: ${{ github.sha }}
           fetch-depth: 0
 
       - name: Set up Go
@@ -32,13 +32,13 @@ jobs:
       - name: Build binaries and checksums
         id: build_bins
         env:
-          TAG_NAME: HEAD-${{ github.event.workflow_run.head_sha }}
+          TAG_NAME: HEAD-${{ github.sha }}
         run: |
           make build-all
 
       - name: Create development release notes
         run: |
-          COMMIT_HASH=$(git rev-parse --short ${{ github.event.workflow_run.head_sha }})
+          COMMIT_HASH=$(git rev-parse --short ${{ github.sha }})
           DATE=$(date -u +"%Y-%m-%d at %H:%M UTC")
           PREV_DEV_COMMIT=$(git rev-list --tags=dev --max-count=1)
           {
@@ -74,7 +74,7 @@ jobs:
 
       - name: Create and push new latest tag
         env:
-          COMMIT_SHA: ${{ github.event.workflow_run.head_sha }}
+          COMMIT_SHA: ${{ github.sha }}
         run: |
           git tag dev "${COMMIT_SHA}"
           git push origin dev
@@ -90,4 +90,4 @@ jobs:
             bin/checksums.txt
           prerelease: true 
           fail_on_unmatched_files: true
-          target_commitish: ${{ github.event.workflow_run.head_sha }}
+          target_commitish: ${{ github.sha }}
