Also build on updates to release workflows
Signed-off-by: Kimmo Lehto <klehto@mirantis.com>

--- a/.github/workflows/update-latest-release.yml
+++ b/.github/workflows/update-latest-release.yml
@@ -8,6 +8,8 @@ on:
       - go.mod
       - go.sum
       - Makefile
+      - .github/workflows/update-latest-release.yml
+      - .github/workflows/release.yml
 
 permissions:
   contents: write 
